# doom

./: .gitignore  CMakeLists.txt
cmake/: CppStandard.cmake
src/doom/: CMakeLists.txt  Charset.h  Configuration.cpp  Configuration.h  Log.cpp  Log.h  StaticInfo.in  Version.h.in
src/doom/log/: FileLogAppender.cpp  FileLogAppender.h  LogAppender.h  LogEvent.h  LogFormatter.cpp  LogFormatter.h  LogLevel.cpp  LogLevel.h  Logger.cpp  Logger.h  StdoutLogAppender.cpp  StdoutLogAppender.h
src/resource/: property.json
test/: CMakeLists.txt  test_config.cpp  test_log.cpp  test_property.json
